--- a/src/main/resources/templates/content-orders-detail.html
+++ b/src/main/resources/templates/content-orders-detail.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-md-2 title rowHeight2x">其他信息</div>
                     <div class="col-md-10 data rowHeight2x">
-<textarea th:text="${orders.orderDesc}" class="form-control" rows="3" placeholder="其他信息">
+<textarea th:text="${orders.orderDesc}" class="form-control" rows="3" placeholder="其他信息" readonly="readonly">
 
 </textarea>
                     </div>
