--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,43 +17,17 @@
                 <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
-                        <span class="label label-success">4</span>
+                        <span class="label label-success">3</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">你有4个邮件</li>
+                        <li class="header">你有3个邮件</li>
                         <li>
                             <!-- inner menu: contains the actual data -->
                             <ul class="menu">
                                 <li>
-                                    <!-- start message -->
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                        </div>
-                                        <h4>
-                                            系统消息
-                                            <small><i class="fa fa-clock-o"></i> 5 分钟前</small>
-                                        </h4>
-                                        <p>欢迎登录系统?</p>
-                                    </a>
-                                </li>
-                                <!-- end message -->
-                                <li>
-                                    <a href="#">
-                                        <div class="pull-left">
-                                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
-                                        </div>
-                                        <h4>
-                                            团队消息
-                                            <small><i class="fa fa-clock-o"></i> 2 小时前</small>
-                                        </h4>
-                                        <p>你有新的任务了</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="pull-left">
-                                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img src="/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Developers
@@ -65,7 +39,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img src="/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Sales Department
@@ -77,7 +51,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img src="/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Reviewers
@@ -95,10 +69,10 @@
                 <li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
-                        <span class="label label-warning">10</span>
+                        <span class="label label-warning">5</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">你有10个新消息</li>
+                        <li class="header">你有5个新消息</li>
                         <li>
                             <!-- inner menu: contains the actual data -->
                             <ul class="menu">
@@ -137,10 +111,10 @@
                 <li class="dropdown tasks-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-flag-o"></i>
-                        <span class="label label-danger">9</span>
+                        <span class="label label-danger">4</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">你有9个新任务</li>
+                        <li class="header">你有4个新任务</li>
                         <li>
                             <!-- inner menu: contains the actual data -->
                             <ul class="menu">
