--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,174 +17,83 @@
                 <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
-                        <span class="label label-success">3</span>
+                        <span id="mail-count1" class="label label-success"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="header">你有3个邮件</li>
-                        <li>
-                            <!-- inner menu: contains the actual data -->
-                            <ul class="menu">
-                                <li>
-                                    <a href="#">
-                                        <div class="pull-left">
-                                            <img src="/img/user4-128x128.jpg" class="img-circle" alt="User Image">
-                                        </div>
-                                        <h4>
-                                            Developers
-                                            <small><i class="fa fa-clock-o"></i> Today</small>
-                                        </h4>
-                                        <p>Why not buy a new awesome theme?</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="pull-left">
-                                            <img src="/img/user3-128x128.jpg" class="img-circle" alt="User Image">
-                                        </div>
-                                        <h4>
-                                            Sales Department
-                                            <small><i class="fa fa-clock-o"></i> Yesterday</small>
-                                        </h4>
-                                        <p>Why not buy a new awesome theme?</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="pull-left">
-                                            <img src="/img/user4-128x128.jpg" class="img-circle" alt="User Image">
-                                        </div>
-                                        <h4>
-                                            Reviewers
-                                            <small><i class="fa fa-clock-o"></i> 2 days</small>
-                                        </h4>
-                                        <p>Why not buy a new awesome theme?</p>
-                                    </a>
-                                </li>
+                        <li class="header">你有<span id="mail-count2"></span>个未读邮件</li>
+                        <li> <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
+                            <ul id="mail-parent" class="menu">
+                                <!--<li>-->
+                                    <!--<a href="#">-->
+                                        <!--<div class="pull-left">-->
+                                            <!--<img src="/img/user4-128x128.jpg" class="img-circle" alt="User Image">-->
+                                        <!--</div>-->
+                                        <!--<h4>-->
+                                            <!--Developers-->
+                                            <!--<small><i class="fa fa-clock-o"></i> Today</small>-->
+                                        <!--</h4>-->
+                                        <!--<p>Why not buy a new awesome theme?</p>-->
+                                    <!--</a>-->
+                                <!--</li>-->
                             </ul>
                         </li>
-                        <li class="footer"><a href="#">See All Messages</a></li>
+                        <li class="footer"><a href="https://mail.qq.com">查看所有邮件</a></li>
                     </ul>
                 </li>
                 <!-- Notifications: style can be found in dropdown.less -->
-                <li class="dropdown notifications-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-bell-o"></i>
-                        <span class="label label-warning">5</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="header">你有5个新消息</li>
-                        <li>
-                            <!-- inner menu: contains the actual data -->
-                            <ul class="menu">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-warning text-yellow"></i> Very long description here that may not
-                                        fit into the page and may cause design problems
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-users text-red"></i> 5 new members joined
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-shopping-cart text-green"></i> 25 sales made
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user text-red"></i> You changed your username
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="footer"><a href="#">View all</a></li>
-                    </ul>
-                </li>
-                <!-- Tasks: style can be found in dropdown.less -->
-                <li class="dropdown tasks-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-flag-o"></i>
-                        <span class="label label-danger">4</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="header">你有4个新任务</li>
-                        <li>
-                            <!-- inner menu: contains the actual data -->
-                            <ul class="menu">
-                                <li>
-                                    <!-- Task item -->
-                                    <a href="#">
-                                        <h3>
-                                            Design some buttons
-                                            <small class="pull-right">20%</small>
-                                        </h3>
-                                        <div class="progress xs">
-                                            <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                <span class="sr-only">20% Complete</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <!-- end task item -->
-                                <li>
-                                    <!-- Task item -->
-                                    <a href="#">
-                                        <h3>
-                                            Create a nice theme
-                                            <small class="pull-right">40%</small>
-                                        </h3>
-                                        <div class="progress xs">
-                                            <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                <span class="sr-only">40% Complete</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <!-- end task item -->
-                                <li>
-                                    <!-- Task item -->
-                                    <a href="#">
-                                        <h3>
-                                            Some task I need to do
-                                            <small class="pull-right">60%</small>
-                                        </h3>
-                                        <div class="progress xs">
-                                            <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                <span class="sr-only">60% Complete</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <!-- end task item -->
-                                <li>
-                                    <!-- Task item -->
-                                    <a href="#">
-                                        <h3>
-                                            Make beautiful transitions
-                                            <small class="pull-right">80%</small>
-                                        </h3>
-                                        <div class="progress xs">
-                                            <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                <span class="sr-only">80% Complete</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <!-- end task item -->
-                            </ul>
-                        </li>
-                        <li class="footer">
-                            <a href="#">View all tasks</a>
-                        </li>
-                    </ul>
-                </li>
+                <!--<li class="dropdown notifications-menu">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--<i class="fa fa-bell-o"></i>-->
+                        <!--<span class="label label-warning">5</span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="header">你有5个新消息</li>-->
+                        <!--<li>-->
+                            <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
+                            <!--<ul class="menu">-->
+                                <!--<li>-->
+                                    <!--<a href="#">-->
+                                        <!--<i class="fa fa-users text-aqua"></i> 5 new members joined today-->
+                                    <!--</a>-->
+                                <!--</li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="footer"><a href="#">View all</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--&lt;!&ndash; Tasks: style can be found in dropdown.less &ndash;&gt;-->
+                <!--<li class="dropdown tasks-menu">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--<i class="fa fa-flag-o"></i>-->
+                        <!--<span class="label label-danger">4</span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="header">你有4个新任务</li>-->
+                        <!--<li>-->
+                            <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
+                            <!--<ul class="menu">-->
+                                <!--<li>-->
+                                    <!--&lt;!&ndash; Task item &ndash;&gt;-->
+                                    <!--<a href="#">-->
+                                        <!--<h3>-->
+                                            <!--Design some buttons-->
+                                            <!--<small class="pull-right">20%</small>-->
+                                        <!--</h3>-->
+                                        <!--<div class="progress xs">-->
+                                            <!--<div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">-->
+                                                <!--<span class="sr-only">20% Complete</span>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</a>-->
+                                <!--</li>-->
+                                <!--&lt;!&ndash; end task item &ndash;&gt;-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="footer">-->
+                            <!--<a href="#">View all tasks</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
                 <!--用户-->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -228,5 +137,43 @@
         // 最后登录时间
         var loginTime = window.localStorage.getItem("loginTime");
         document.getElementById("login-time").innerText=loginTime;
+        // 邮件
+        var mail = JSON.parse(window.localStorage.getItem("mail"));
+        if (mail.length != 0) {
+            document.getElementById("mail-count1").innerText=mail.length;
+        }
+        document.getElementById("mail-count2").innerText=mail.length;
+        var parent = document.getElementById("mail-parent");
+        for (var i = 0; i < mail.length; i++) {
+            var li = document.createElement("li");
+            parent.appendChild(li);
+                var a = document.createElement("a");
+                a.setAttribute("href", "https://mail.qq.com");
+                li.appendChild(a);
+                    var div = document.createElement("div");
+                    div.setAttribute("class", "pull-left");
+                    a.appendChild(div);
+                        var img = document.createElement("img");
+                        img.setAttribute("src", "/img/user4-128x128.jpg");
+                        img.setAttribute("class", "img-circle");
+                        img.setAttribute("alt", "User Image");
+                        div.appendChild(img);
+                    var h4 = document.createElement("h4");
+                    a.appendChild(h4);
+                        var s1 = document.createElement("span");
+                        s1.innerText = mail[i].sender;
+                        h4.appendChild(s1);
+                        var small = document.createElement("small");
+                        h4.appendChild(small);
+                            // var i = document.createElement("i");
+                            // i.setAttribute("class", "fa fa-clock-o");
+                            // small.appendChild(i);
+                            var s2 = document.createElement("span");
+                            s2.innerText = mail[i].sentDate;
+                            small.appendChild(s2);
+                    var p = document.createElement("p");
+                    p.innerText = mail[i].subject;
+                    a.appendChild(p);
+        }
     </script>
 </header>
