--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -63,6 +63,15 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="/event/findAll">
+                    <i class="fa fa-calendar"></i> <span>日历备忘</span>
+                    <!--<span class="pull-right-container">-->
+                        <!--<small class="label pull-right bg-red">1</small>-->
+                        <!--<small class="label pull-right bg-blue">1</small>-->
+                    <!--</span>-->
+                </a>
+            </li>
         </ul>
     </section>
     <!-- /.sidebar -->
