--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -64,7 +64,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/event/findAll">
+                <a href="/event/index">
                     <i class="fa fa-calendar"></i> <span>日历备忘</span>
                     <!--<span class="pull-right-container">-->
                         <!--<small class="label pull-right bg-red">1</small>-->
