--- a/src/main/resources/templates/content-users-list.html
+++ b/src/main/resources/templates/content-users-list.html
@@ -218,7 +218,9 @@
                         <span aria-hidden="true">&times;</span>
                         <span class="sr-only">Close</span>
                     </button>
-                    <h5 class="modal-title"><i class="fa fa-exclamation-circle"></i> [Title]</h5>
+                    <h5 class="modal-title">
+                        <span><img src="../img/tip.png" width="34px" height="34px" align-text="center"></span> [Title]
+                    </h5>
                 </div>
                 <div class="modal-body">
                     <p>[Message]</p>
