--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -72,6 +72,11 @@
                     <!--</span>-->
                 </a>
             </li>
+            <li>
+                <a href="/email/index">
+                    <i class="fa fa-envelope"></i> <span>电子邮件</span>
+                </a>
+            </li>
         </ul>
     </section>
     <!-- /.sidebar -->
