--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,6 +14,40 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
+                <!--任务-->
+                <!--<li class="dropdown tasks-menu">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--<i class="fa fa-calendar-check-o"></i>-->
+                        <!--<span id="event-count1" class="label label-danger"></span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="header">你有<span id="event-count2"></span>个待办事项</li>-->
+                        <!--<li>-->
+                            <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
+                            <!--<ul class="menu" id="event-parent">-->
+                                <!--<li>-->
+                                    <!--&lt;!&ndash;&lt;!&ndash; Task item &ndash;&gt;&ndash;&gt;-->
+                                    <!--<a href="#">-->
+                                        <!--<h3>-->
+                                            <!--Design some buttons-->
+                                            <!--<small class="pull-right">20%</small>-->
+                                        <!--</h3>-->
+                                        <!--<div class="progress xs">-->
+                                            <!--<div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">-->
+                                                <!--<span class="sr-only">20% Complete</span>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</a>-->
+                                <!--</li>-->
+                                <!--&lt;!&ndash; end task item &ndash;&gt;-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="footer">-->
+                            <!--<a href="/event/findAll">查看所有事项</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--邮件-->
                 <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
@@ -37,10 +71,10 @@
                                 <!--</li>-->
                             </ul>
                         </li>
-                        <li class="footer"><a href="https://mail.qq.com">查看所有邮件</a></li>
+                        <li class="footer"><a href="/email/index">查看所有邮件</a></li>
                     </ul>
                 </li>
-                <!-- Notifications: style can be found in dropdown.less -->
+                 <!--Notifications: style can be found in dropdown.less-->
                 <!--<li class="dropdown notifications-menu">-->
                     <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
                         <!--<i class="fa fa-bell-o"></i>-->
@@ -59,39 +93,6 @@
                             <!--</ul>-->
                         <!--</li>-->
                         <!--<li class="footer"><a href="#">View all</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--&lt;!&ndash; Tasks: style can be found in dropdown.less &ndash;&gt;-->
-                <!--<li class="dropdown tasks-menu">-->
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-                        <!--<i class="fa fa-flag-o"></i>-->
-                        <!--<span class="label label-danger">4</span>-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu">-->
-                        <!--<li class="header">你有4个新任务</li>-->
-                        <!--<li>-->
-                            <!--&lt;!&ndash; inner menu: contains the actual data &ndash;&gt;-->
-                            <!--<ul class="menu">-->
-                                <!--<li>-->
-                                    <!--&lt;!&ndash; Task item &ndash;&gt;-->
-                                    <!--<a href="#">-->
-                                        <!--<h3>-->
-                                            <!--Design some buttons-->
-                                            <!--<small class="pull-right">20%</small>-->
-                                        <!--</h3>-->
-                                        <!--<div class="progress xs">-->
-                                            <!--<div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">-->
-                                                <!--<span class="sr-only">20% Complete</span>-->
-                                            <!--</div>-->
-                                        <!--</div>-->
-                                    <!--</a>-->
-                                <!--</li>-->
-                                <!--&lt;!&ndash; end task item &ndash;&gt;-->
-                            <!--</ul>-->
-                        <!--</li>-->
-                        <!--<li class="footer">-->
-                            <!--<a href="#">View all tasks</a>-->
-                        <!--</li>-->
                     <!--</ul>-->
                 <!--</li>-->
                 <!--用户-->
@@ -154,13 +155,14 @@
                     div.setAttribute("class", "pull-left");
                     a.appendChild(div);
                         var img = document.createElement("img");
-                        img.setAttribute("src", "/img/user4-128x128.jpg");
+                        img.setAttribute("src", "/img/email.png");
                         img.setAttribute("class", "img-circle");
                         img.setAttribute("alt", "User Image");
                         div.appendChild(img);
                     var h4 = document.createElement("h4");
                     a.appendChild(h4);
                         var s1 = document.createElement("span");
+                        s1.setAttribute("style", "display:block; width:80px;overflow:hidden;");
                         s1.innerText = mail[i].sender;
                         h4.appendChild(s1);
                         var small = document.createElement("small");
