--- a/src/main/resources/templates/content-email-list.html
+++ b/src/main/resources/templates/content-email-list.html
@@ -203,7 +203,7 @@
                         <div class="box-body no-padding">
                             <span th:if="${mail.size()==0}">
                                 <div>
-                                    <h3 class="box-title">数据拉取中，请等待大约15~30秒后刷新</h3>
+                                    <h5> 数据拉取中，请等待大约15~30秒后刷新</h5>
                                 </div>
                                 <div class="overlay">
                                     <i class="fa fa-refresh fa-spin"></i>
