--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -73,7 +73,7 @@
                 </a>
             </li>
             <li>
-                <a href="/email/index">
+                <a href="/email/list">
                     <i class="fa fa-envelope"></i> <span>电子邮件</span>
                 </a>
             </li>
