--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -149,7 +149,7 @@
             var li = document.createElement("li");
             parent.appendChild(li);
                 var a = document.createElement("a");
-                a.setAttribute("href", "https://mail.qq.com");
+                a.setAttribute("href", "/email/detail/" + mail[i].id);
                 li.appendChild(a);
                     var div = document.createElement("div");
                     div.setAttribute("class", "pull-left");
