--- a/src/main/resources/templates/content-email-detail.html
+++ b/src/main/resources/templates/content-email-detail.html
@@ -215,60 +215,25 @@
                         <div class="box-body no-padding">
                             <div class="mailbox-read-info">
                                 <h3 th:text="${mail.subject}"></h3>
-                                <h5>From: <span th:text="${mail.sender}"></span>
+                                <h5>发送者: <span th:text="${mail.sender}"></span>
                                     <span class="mailbox-read-time pull-right" th:text="${mail.sentDate}"></span></h5>
                             </div>
                             <!-- /.mailbox-read-info -->
-                            <div class="mailbox-controls with-border text-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Delete">
-                                        <i class="fa fa-trash-o"></i></button>
-                                    <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Reply">
-                                        <i class="fa fa-reply"></i></button>
-                                    <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Forward">
-                                        <i class="fa fa-share"></i></button>
-                                </div>
-                                <!-- /.btn-group -->
-                                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" title="Print">
-                                    <i class="fa fa-print"></i></button>
-                            </div>
+                            <!--<div class="mailbox-controls with-border text-center">-->
+                                <!--<div class="btn-group">-->
+                                    <!--<button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Delete">-->
+                                        <!--<i class="fa fa-trash-o"></i></button>-->
+                                    <!--<button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Reply">-->
+                                        <!--<i class="fa fa-reply"></i></button>-->
+                                    <!--<button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-container="body" title="Forward">-->
+                                        <!--<i class="fa fa-share"></i></button>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; /.btn-group &ndash;&gt;-->
+                                <!--<button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" title="Print">-->
+                                    <!--<i class="fa fa-print"></i></button>-->
+                            <!--</div>-->
                             <!-- /.mailbox-controls -->
-                            <div class="mailbox-read-message">
-                                <p>Hello John,</p>
-
-                                <p>Keffiyeh blog actually fashion axe vegan, irony biodiesel. Cold-pressed hoodie chillwave put a bird
-                                    on it aesthetic, bitters brunch meggings vegan iPhone. Dreamcatcher vegan scenester mlkshk. Ethical
-                                    master cleanse Bushwick, occupy Thundercats banjo cliche ennui farm-to-table mlkshk fanny pack
-                                    gluten-free. Marfa butcher vegan quinoa, bicycle rights disrupt tofu scenester chillwave 3 wolf moon
-                                    asymmetrical taxidermy pour-over. Quinoa tote bag fashion axe, Godard disrupt migas church-key tofu
-                                    blog locavore. Thundercats cronut polaroid Neutra tousled, meh food truck selfies narwhal American
-                                    Apparel.</p>
-
-                                <p>Raw denim McSweeney's bicycle rights, iPhone trust fund quinoa Neutra VHS kale chips vegan PBR&amp;B
-                                    literally Thundercats +1. Forage tilde four dollar toast, banjo health goth paleo butcher. Four dollar
-                                    toast Brooklyn pour-over American Apparel sustainable, lumbersexual listicle gluten-free health goth
-                                    umami hoodie. Synth Echo Park bicycle rights DIY farm-to-table, retro kogi sriracha dreamcatcher PBR&amp;B
-                                    flannel hashtag irony Wes Anderson. Lumbersexual Williamsburg Helvetica next level. Cold-pressed
-                                    slow-carb pop-up normcore Thundercats Portland, cardigan literally meditation lumbersexual crucifix.
-                                    Wayfarers raw denim paleo Bushwick, keytar Helvetica scenester keffiyeh 8-bit irony mumblecore
-                                    whatever viral Truffaut.</p>
-
-                                <p>Post-ironic shabby chic VHS, Marfa keytar flannel lomo try-hard keffiyeh cray. Actually fap fanny
-                                    pack yr artisan trust fund. High Life dreamcatcher church-key gentrify. Tumblr stumptown four dollar
-                                    toast vinyl, cold-pressed try-hard blog authentic keffiyeh Helvetica lo-fi tilde Intelligentsia. Lomo
-                                    locavore salvia bespoke, twee fixie paleo cliche brunch Schlitz blog McSweeney's messenger bag swag
-                                    slow-carb. Odd Future photo booth pork belly, you probably haven't heard of them actually tofu ennui
-                                    keffiyeh lo-fi Truffaut health goth. Narwhal sustainable retro disrupt.</p>
-
-                                <p>Skateboard artisan letterpress before they sold out High Life messenger bag. Bitters chambray
-                                    leggings listicle, drinking vinegar chillwave synth. Fanny pack hoodie American Apparel twee. American
-                                    Apparel PBR listicle, salvia aesthetic occupy sustainable Neutra kogi. Organic synth Tumblr viral
-                                    plaid, shabby chic single-origin coffee Etsy 3 wolf moon slow-carb Schlitz roof party tousled squid
-                                    vinyl. Readymade next level literally trust fund. Distillery master cleanse migas, Vice sriracha
-                                    flannel chambray chia cronut.</p>
-
-                                <p>Thanks,<br>Jane</p>
-                            </div>
+                            <div id="message-content" class="mailbox-read-message"></div>
                             <!-- /.mailbox-read-message -->
                         </div>
                         <!-- /.box-body -->
@@ -297,7 +262,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <span class="mailbox-attachment-icon has-img"><img src="../../dist/img/photo1.png" alt="Attachment"></span>
+                                    <span class="mailbox-attachment-icon has-img"><img src="/img/photo1.png" alt="Attachment"></span>
 
                                     <div class="mailbox-attachment-info">
                                         <a href="#" class="mailbox-attachment-name"><i class="fa fa-camera"></i> photo1.png</a>
@@ -308,7 +273,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <span class="mailbox-attachment-icon has-img"><img src="../../dist/img/photo2.png" alt="Attachment"></span>
+                                    <span class="mailbox-attachment-icon has-img"><img src="/img/photo2.png" alt="Attachment"></span>
 
                                     <div class="mailbox-attachment-info">
                                         <a href="#" class="mailbox-attachment-name"><i class="fa fa-camera"></i> photo2.png</a>
@@ -395,7 +360,7 @@
 <!-- jQuery 2.2.3 -->
 <script src="/plugins/jQuery/jquery-2.2.3.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
-<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- Slimscroll -->
 <script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script>
 <!-- FastClick -->
@@ -451,12 +416,12 @@
 
     $(document).ready(function () {
         // 选择框
-        $(".select2").select2();
+        // $(".select2").select2();
 
         // WYSIHTML5编辑器
-        $(".textarea").wysihtml5({
-            locale: 'zh-CN'
-        });
+        // $(".textarea").wysihtml5({
+        //     locale: 'zh-CN'
+        // });
     });
 
     // 设置激活菜单
@@ -471,6 +436,13 @@
     $(document).ready(function () {
         setSidebarActive("admin-email-detail");
 
+        if (""!=[[${mail.content}]]) {
+            document.getElementById('message-content').innerHTML=[[${mail.content}]];
+        } else if (""!=[[${mail.text}]]) {
+            document.getElementById('message-content').innerText=[[${mail.text}]];
+        } else {
+            document.getElementById('message-content').innerText='';
+        }
     });
 </script>
 </body>
