--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -71,7 +71,7 @@
                                 <!--</li>-->
                             </ul>
                         </li>
-                        <li class="footer"><a href="/email/index">查看所有邮件</a></li>
+                        <li class="footer"><a href="/email/list">查看所有邮件</a></li>
                     </ul>
                 </li>
                  <!--Notifications: style can be found in dropdown.less-->
